[package]
name = "qfc-relay-spin"
version = "0.1.0"
authors.workspace = true
description = "Spin relayer of fastchain finality proofs"
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true }
codec = { workspace = true, default-features = true }
futures = { workspace = true }
log = { workspace = true, default-features = true }
prometheus-endpoint = { workspace = true, default-features = true }
sc-block-builder = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-consensus = { workspace = true, default-features = true }
sc-consensus-slots = { workspace = true, default-features = true }
sc-telemetry = { workspace = true, default-features = true }
sp-api = { workspace = true, default-features = true }
sp-application-crypto = { workspace = true, default-features = true }
sp-block-builder = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-consensus = { workspace = true, default-features = true }
qfp-consensus-spin = { workspace = true, default-features = true }
sp-consensus-slots = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-inherents = { workspace = true, default-features = true }
sp-keystore = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
thiserror = { workspace = true }
structopt = "0.3"
strum = { version = "0.25.0", features = ["derive"] }
substrate-relay-helper = { workspace = true }
relay-utils = { workspace = true }
anyhow = { version = "1.0.97" }
relay-substrate-client = { workspace = true }
bp-runtime = { workspace = true }

bp-bridge-hub-cumulus = { workspace = true }
bp-polkadot-core = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true, default-features = true }
sc-keystore = { workspace = true, default-features = true }
sc-network = { workspace = true, default-features = true }
sc-network-test = { workspace = true }
sp-keyring = { workspace = true, default-features = true }
sp-timestamp = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }
substrate-test-runtime-client = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, default-features = true }
