[package]
name = "qfc-relayer-spin"
version = "0.1.0"
authors.workspace = true
description = "Spin fastchain finality proof relayer"
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
hex = "0.4.3"
subxt = "0.41.0"
subxt-signer = "0.41.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
