[package]
name = "pallet-qf-polkavm-dev"
description = "Quantum Fusion pallet for Polkadot VM development"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }

# XCQ
xcq-extension = { path = "../../xcq-extension", default-features = false}
xcq-extension-fungibles = { path = "../../xcq-extension-fungibles", default-features = false}
xcq-primitives = { path = "../../xcq-primitives", default-features = false}
xcq-extension-core = { path = "../../xcq-extension-core", default-features = false}

log = "0.4"

# frame deps
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
polkavm.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"polkavm/std",
	"xcq-extension/std",
	"xcq-extension-fungibles/std",
	"xcq-extension-core/std",
	"xcq-primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
