[package]
name = "pallet-spin-polkadot"
description = "Quantum Fusion pallet for obtaining secure finality from Polkadot to SPIN."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true, default-features = false }
scale-info = { features = [
    "derive",
], workspace = true, default-features = false }
frame = { workspace = true, features = [
    "experimental",
    "runtime",
], default-features = false }
log = { workspace = true }
polkadot-parachain-primitives = { workspace = true, default-features = false }
sp-trie = { workspace = true, default-features = false }
sp-consensus-grandpa = { workspace = true, default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame/runtime-benchmarks",
    "polkadot-parachain-primitives/runtime-benchmarks",
]
std = [
    "codec/std",
    "frame/std",
    "scale-info/std",
    "polkadot-parachain-primitives/std",
    "sp-trie/std",
    "sp-consensus-grandpa/std",
]
try-runtime = ["frame/try-runtime"]
