[package]
name = "pallet-spin-polkadot"
description = "QF Network pallet for validating fastchain finality proofs on the parachain."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"], default-features = false }
finality-grandpa = { version = "0.16.3", default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
log = { workspace = true }
scale-info = { workspace = true, features = ["derive"], default-features = false }
sp-consensus-grandpa = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
]
std = [
	"codec/std",
	"finality-grandpa/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-consensus-grandpa/std",
	"sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime"]
