[package]
name = "qf-parachain-node"
description = "QF Parachain Client Node"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
clap = { features = ["derive"], workspace = true }
codec = { workspace = true, default-features = true }
color-print = { workspace = true }
docify = { workspace = true }
futures = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
log = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }

polkadot-sdk = { workspace = true, features = ["node"] }

qf-parachain-runtime = { workspace = true }
qf-runtime = { workspace = true }

# substrate client
sc-cli = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sc-executor = { workspace = true, default-features = true }
sc-network = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true }
sc-telemetry = { workspace = true, default-features = true }
sc-transaction-pool = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
sc-offchain = { workspace = true, default-features = true }
qfc-consensus-spin = { workspace = true, default-features = true }
qfp-consensus-spin = { workspace = true, default-features = true }
sc-chain-spec = { workspace = true, default-features = true }
sc-consensus = { workspace = true, default-features = true }
sc-consensus-grandpa = { workspace = true, default-features = true }
sp-consensus-grandpa = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-rpc-api = { workspace = true, default-features = true }
sc-basic-authorship = { workspace = true, default-features = true }

# substrate primitives
sp-runtime = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-timestamp = { workspace = true, default-features = true }
sp-inherents = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }
sp-api = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-block-builder = { workspace = true, default-features = true }

# Substrate
prometheus-endpoint = { workspace = true, default-features = true }
sc-tracing = { workspace = true, default-features = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"log/std",
	"polkadot-sdk/std",
	"qf-parachain-runtime/std",
	"qf-runtime/std",
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
	"qf-parachain-runtime/runtime-benchmarks",
	"qf-runtime/runtime-benchmarks",
]
try-runtime = [
	"polkadot-sdk/try-runtime",
	"qf-parachain-runtime/try-runtime",
	"qf-runtime/try-runtime",
]
