[package]
name = "qf-test-runtime"
version = "0.1.0"
authors.workspace = true
build = "build.rs"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
