[package]
name = "runtime-generate-bags"
version = "3.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "Bag threshold generation script for pallet-bag-list and qf-runtime."
publish = false

[lints]
workspace = true

[dependencies]
generate-bags.default-features = true
generate-bags.workspace = true
qf-runtime = { workspace = true, features = ["std"] }

# third-party
clap = { features = ["derive"], workspace = true }
