[package]
name = "qf-parachain-node"
description = "A parachain node built with Substrate and Cumulus."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
clap = { features = ["derive"], workspace = true }
log = { workspace = true, default-features = true }
codec = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
jsonrpsee = { features = ["server"], workspace = true }
futures = { workspace = true }
serde_json = { workspace = true, default-features = true }
docify = { workspace = true }
color-print = { workspace = true }

polkadot-sdk = { workspace = true, features = ["node"] }

qf-parachain-runtime = { path = "../runtime", default-features = false }

# Substrate
sc-tracing = { workspace = true, default-features = true }
prometheus-endpoint = { workspace = true, default-features = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"log/std",
	"qf-parachain-runtime/std",
	"polkadot-sdk/std",
]
runtime-benchmarks = [
	"qf-parachain-runtime/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"qf-parachain-runtime/try-runtime",
	"polkadot-sdk/try-runtime",
]
